# tp-concurrente

./: .gitignore  CMakeLists.txt  Cocinero.cpp  Cocinero.h  Comensal.cpp  CorteLuz_Handler.h  Empleado.cpp  Mozo.cpp  Pedido.cpp  Plato.cpp  Plato.h  Proceso.cpp  Proceso.h  ProcesoCocinero.cpp  ProcesoCocinero.h  ProcesoMozo.cpp  ProcesoMozo.h  ProcesoRecepcionista.cpp  ProcesoRecepcionista.h  ProcesoRecpcionista.cpp  README.md  Restaurante.cpp  Restaurante.h  buildTP.sh  conf.json  main.cpp
Personas/: Cocinero.h  Comensal.h  Recepcionista.cpp  Recepcionista.h
Procesos/: Proceso.cpp  Proceso.h  ProcesoCocinero.cpp  ProcesoCocinero.h  ProcesoMozo.cpp  ProcesoMozo.h
include/empleados/: Cocinero.h  Empleado.h  Mozo.h
include/excepciones/: Exceptions.h
include/handlers/: SIGTERM_Handler.h  SIGUSR1_Handler.h  Semaforo_Handler.h
include/modelo/: ObjetosDeRestaurante.h  Pedido.h  Restaurante.h
source/: main.cpp
tp1/: CMakeLists.txt  README.md  makeTP.sh
tp1/include/excepciones/: Exceptions.h
tp1/include/handlers/: SIGTERM_Handler.h  Semaforo_Handler.h
tp1/include/modelo/: ObjetosDeRestaurante.h
tp1/include/procesos/: Proceso.h  ProcesoCocinero.h  ProcesoComensales.h  ProcesoGeneradorComensales.h  ProcesoMesasManager.h  ProcesoMozo.h
tp1/include/utils/: Constantes.h  Semaforo.h  Utils.h
tp1/include/utils/fifos/: Fifo.h
tp1/source/modelo/: Pedido.cpp  Plato.cpp
tp1/source/procesos/: ProcesoCocinero.cpp  ProcesoMesasManager.cpp  ProcesoRecepcionista.cpp
tp1/source/utils/: Logger.cpp  Utils.cpp  json11.cpp
tp1/source/utils/fifos/: FifoEscritura.cpp
(+37 files in other folders)
